---
title: Calculation State
---

classDiagram
    direction LR

    class CalculationState {
        -string color
        -bool editable
        -Collection~Calculation~ calculations
        +getColor() string
        +setColor(string)
        +isEditable() bool
        +setEditable(bool)
        +getCalculations() Collection~calculations~
        +count() int
    }

    class AbstractEntity {
        <<Abstract>>
    }

    class AbstractCodeEntity {
        <<Abstract>>
    }

    class EntityInterface {
        <<Interface>>
    }

    EntityInterface <|.. AbstractEntity
    AbstractCodeEntity <|-- CalculationState
    AbstractEntity <|-- AbstractCodeEntity

    CalculationState "0" --> "*" Calculation

    click EntityInterface call nodeCallback()
    click AbstractEntity call nodeCallback()
    click AbstractCodeEntity call nodeCallback()
    click Calculation call nodeCallback()
